Create landing page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,63 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
-layout: home
+layout: default
 ---
+<section class="section hero">
+  <div class="hero-content">
+    <div class="hero-left">
+      <h1 class="hero-title">The Open Source Survey</h1>
+      <div class="hero-info">
+        <p>Take a 3 minute survey and help identify priorities and challenges of the open-source community.</p>
+        <p>Completely anonymous. No registration needed.</p>
+      </div>
+      <div class="actions">
+        <a href="#" class="btn">Take a survey</a>
+        <span>Scroll down for more info</span>
+      </div>
+    </div>
+    <div class="hero-right">
+      <img src="{{ "/assets/images/hero.svg" | relative_url }}" alt="The Open Source Survey">
+    </div>
+  </div>
+</section>
+
+<section class="section goals">
+  <h2 class="section-title">Goals</h2>
+
+  <div class="section-content">
+    <p>We are a group of developers and entrepreneurs, who on a daily basis struggle to balance day-to-day activities, jobs, and families with their open source contributions. We are trying to understand to what degree does the community share our problems.</p>
+    <p>Ultimately, we are trying to acknowledge and understand some of the obstacles open source community is faced with, so we can begin working on overcoming them.</p>
+  </div>
+</section>
+
+<section class="section privacy">
+  <h2 class="section-title">Privacy</h2>
+
+  <div class="section-content">
+    <p>We take the respondent's privacy seriously. You are not required to provide any identifying information. We do not collect any data, other than what you provide through the survey (no cookies, ads or analytics of any kind).</p>
+    <p>Optionally you can provide us with GitHub username or email address. We will use this information to contact you once the survey results are available.</p>
+    <p>If you’ve provided identifying information and you want to withdraw your survey entry, contact us at <a
+      href="mailto:hello@opensourcesurvey.io">hello@opensourcesurvey.io</a>.</p>
+    <p>No third party will be given access to any identifying information.</p>
+  </div>
+</section>
+
+<section class="section results">
+  <h2 class="section-title">Results</h2>
+
+  <div class="section-content">
+    <p>Once the survey is finished, a complete dataset (without any personal information) will be publically available. Any identifying information will be removed from the dataset prior to its publication.</p>
+    <p>Additionally, we will process the data and publish the report.</p>
+  </div>
+</section>
+
+<section class="pre-footer">
+  <div class="pre-footer-content">
+    <div class="pre-footer-left">
+      <h2>Ready to get started?</h2>
+      <p>Take 3 minutes and complete anonymous survey</p>
+    </div>
+    <div class="pre-footer-right">
+      <a href="#" class="btn">Take a survey</a>
+    </div>
+  </div>
+</section>
