--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
         <p>Completely anonymous. No registration needed.</p>
       </div>
       <div class="actions">
-        <a href="#" class="btn">Take a survey</a>
+        <a href="{{ '/survey' | relative_path }}" class="btn">Take a survey</a>
         <span>Scroll down for more info</span>
       </div>
     </div>
@@ -57,7 +57,7 @@ layout: default
       <p>Take 3 minutes and complete anonymous survey</p>
     </div>
     <div class="pre-footer-right">
-      <a href="#" class="btn">Take a survey</a>
+      <a href="{{ '/survey' | relative_path }}" class="btn">Take a survey</a>
     </div>
   </div>
 </section>
