Fix survey input text styles

--- a/survey.html
+++ b/survey.html
@@ -197,7 +197,7 @@ layout: default
       </div>
       <div class="answers">
         <div class="answer">
-          <input type="text" name="EMAIL" title="Enter email address" placeholder="Enter email address">
+          <input type="email" name="EMAIL" title="Enter email address" placeholder="Enter email address">
         </div>
       </div>
     </div>
