--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
   <div class="section-content">
     <h2 class="section-title">Goals</h2>
 
-    <p>We are a group of developers and entrepreneurs, who on a daily basis struggle to balance day-to-day activities, jobs, and families with their open source contributions. We are trying to understand to what degree does the community share our problems.</p>
+    <p>We are a group of developers and entrepreneurs, who on a daily basis struggle to balance day-to-day activities, jobs, and families with our open source contributions. We are trying to understand to what degree the community share our problems.</p>
     <p>Ultimately, we are trying to acknowledge and understand some of the obstacles open source community is faced with, so we can begin working on overcoming them.</p>
   </div>
 </section>
