--- a/survey.html
+++ b/survey.html
@@ -35,7 +35,7 @@ layout: default
       <div class="answers">
         <div class="answer">
           <input type="checkbox" name="OSS_INVOLVEMENT[]" value="owner" id="oss-involvement-owner">
-          <label for="oss-involvement-owner">I own one or more open-source project</label>
+          <label for="oss-involvement-owner">I own one or more open-source projects</label>
         </div>
 
         <div class="answer">
@@ -164,7 +164,7 @@ layout: default
 
     <div class="question">
       <div class="question-info">
-        <h2 class="question-text"><span class="question-index">6.</span> Did you recently abandon or neglect a personal project due to a lack of time and/or funding?</h2>
+        <h2 class="question-text"><span class="question-index">6.</span> Have you recently abandoned or neglected a personal project due to a lack of time and/or funding?</h2>
       </div>
       <div class="answers">
         <div class="answer">
