Update survey title styles

--- a/survey.html
+++ b/survey.html
@@ -4,8 +4,10 @@ layout: default
 ---
 
 <section class="section survey-title">
-  <h1>The Open Source Survey</h1>
-  <p>Take a 3 minute survey and help identify priorities and challenges of the open-source community.</p>
+  <div class="survey-title-content">
+    <h1>The Open Source Survey</h1>
+    <p>Take a 3 minute survey and help identify priorities and challenges of the open-source community.</p>
+  </div>
 </section>
 
 <form action="{{site.survey_submit_url}}" method="post" enctype="application/x-www-form-urlencoded">
