--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
 <section class="section results">
   <div class="section-content">
     <h2 class="section-title">Results</h2>
-    <p>Once the survey is finished, a complete dataset (without any personal information) will be publically available. Any identifying information will be removed from the dataset prior to its publication.</p>
+    <p>Once the survey is finished, a complete dataset (without any personal information) will be publicly available. Any identifying information will be removed from the dataset prior to its publication.</p>
     <p>Additionally, we will process the data and publish the report.</p>
   </div>
 </section>
