--- a/survey.html
+++ b/survey.html
@@ -6,7 +6,7 @@ layout: default
 <section class="section survey-title">
   <div class="survey-title-content">
     <h1>The Open Source Survey</h1>
-    <p>Take a 3 minute survey and help identify priorities and challenges of the open-source community.</p>
+    <p>NOTE: In the following survey, "open-source contribution" refers to the contributions you make in your spare time. We are aware that some get paid for working on FOSS, but most of us are not that lucky.  😉</p>
   </div>
 </section>
 
