Add funding option

--- a/survey.html
+++ b/survey.html
@@ -158,6 +158,11 @@ layout: default
         </div>
 
         <div class="answer">
+          <input type="checkbox" name="FUNDING" value="commercial-support" id="funding-commercial-support">
+          <label for="funding-commercial-support">by offering commercial support</label>
+        </div>
+
+        <div class="answer">
           <input type="checkbox" name="FUNDING" value="none" id="funding-none">
           <label for="funding-none">No funding</label>
         </div>
