Add raffle note

--- a/survey.html
+++ b/survey.html
@@ -6,7 +6,7 @@ layout: default
 <section class="section survey-title">
   <div class="survey-title-content">
     <h1>The Open Source Survey</h1>
-    <p>NOTE: In the following survey, "open-source contribution" refers to the contributions you make in your spare time. We are aware that some get paid for working on FOSS, but most of us are not that lucky.  😉</p>
+    <p>In the following survey, "open-source contribution" refers to the contributions you make in your spare time. We are aware that some get paid for working on FOSS, but most of us are not that lucky.  😉</p>
   </div>
 </section>
 
@@ -194,6 +194,8 @@ layout: default
       <div class="answers">
         <div class="answer">
           <input type="email" name="EMAIL" title="Enter email address" placeholder="Enter email address">
+
+          <p><strong>Note:</strong> Provide your email above to enter a raffle and get a chance to win cool tech merch.</p>
         </div>
       </div>
     </div>
