Add raffle info

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
         <p>Take a 3 minute survey and help identify priorities and challenges of the open-source community.</p>
         <p>Completely anonymous. No registration needed.</p>
       </div>
+      <div class="raffle">Complete the survey and get a chance to win cool tech merch</div>
       <div class="actions">
         <a href="{{ '/survey' | relative_path }}" class="btn">Take the survey</a>
         <span>Scroll down for more info</span>
@@ -45,6 +46,7 @@ layout: default
     <h2 class="section-title">Results</h2>
     <p>Once the survey is finished, a complete dataset (without any personal information) will be publicly available. Any identifying information will be removed from the dataset prior to its publication.</p>
     <p>Additionally, we will process the data and publish the report.</p>
+    <p>We are giving away tech merch (shirts, mugs, stickers...).  All raffle winners will be contacted via email by the 01.03.2020.</p>
   </div>
 </section>
 
