Publish the results

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@ layout: default
         <p>Take a 3 minute survey and help identify priorities and challenges of the open-source community.</p>
         <p>Completely anonymous. No registration needed.</p>
       </div>
-      <div class="raffle">Complete the survey and get a chance to win cool tech merch</div>
-      <div class="actions">
-        <a href="{{ '/survey' | relative_path }}" class="btn">Take the survey</a>
-        <span>Scroll down for more info</span>
-      </div>
+      <div class="raffle">The survey is now over. Thank you all for participating! Check out the <a href="{{ '/results.pdf' | relative_path }}">results</a>.</div>
     </div>
     <div class="hero-right">
       <img src="{{ "/assets/images/hero.svg" | relative_url }}" alt="The Open Source Survey">
@@ -47,17 +43,5 @@ layout: default
     <p>Once the survey is finished, a complete dataset (without any personal information) will be publicly available. Any identifying information will be removed from the dataset prior to its publication.</p>
     <p>Additionally, we will process the data and publish the report.</p>
     <p>We are giving away tech merch (shirts, mugs, stickers...).  All raffle winners will be contacted via email by the 01.03.2020.</p>
-  </div>
-</section>
-
-<section class="pre-footer">
-  <div class="pre-footer-content">
-    <div class="pre-footer-left">
-      <h2>Ready to get started?</h2>
-      <p>Take 3 minutes and complete anonymous survey</p>
-    </div>
-    <div class="pre-footer-right">
-      <a href="{{ '/survey' | relative_path }}" class="btn">Take the survey</a>
-    </div>
   </div>
 </section>
